    src/petname/__init__.py, src/petname/Makefile,
    src/petname/petname.py.in, src/petname/update.sh:
    - add a python library, too
  * === added directory github.com, === added directory
    github.com/petname, github.com/petname/petname/update.sh, ===
    removed directory src, === renamed directory src/petname_cmd =>
    github.com/petname/petname_cmd, === renamed directory src/petname =>
    github.com/petname/petname:
    - reorg the dir structure for better golang packaging
  * === renamed directory github.com/petname =>
    github.com/dustinkirkland:
    - adjust package github location
  * github.com/dustinkirkland/petname/__init__.py => __init__.py,
    github.com/dustinkirkland/petname/Makefile,
    github.com/dustinkirkland/petname/petname.go.in => petname.go.in,
    github.com/dustinkirkland/petname/petname.py.in => petname.py.in,
    github.com/dustinkirkland/petname/petname_test.go =>
    petname_test.go, github.com/dustinkirkland/petname/update.sh =>
    update.sh, Makefile, === removed directory github.com, === removed
    directory github.com/dustinkirkland, === removed directory
    github.com/dustinkirkland/petname, === renamed directory
    github.com/dustinkirkland/petname_cmd => cmd:
    - still rearranging source tree to make #go-nuts happy
  * debian/petname.install, === removed directory usr, === removed
    directory usr/lib, === removed directory usr/lib/petname, update.sh,
    usr/lib/petname/adjectives.txt => adjectives.txt,
    usr/lib/petname/adverbs.txt => adverbs.txt,
    usr/lib/petname/names.txt => names.txt:
    - still trying to make #go-nuts happy, moved txt files top level
  * === added directory cmd/petname, cmd/Makefile, cmd/petname_cmd.go =>
    cmd/petname/main.go, petname.go, petname.py, update.sh:
    - waddayaknow, #go-nuts suggests more changes
  * debian/golang-petname-dev.install:
    - update some paths

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 13 Dec 2014 11:27:59 -0600